k8s/reservation-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reservation-service
  template:
    metadata:
      labels:
        app: reservation-service
    spec:
      containers:
      - name: reservation-service
        image: reservation-service:latest
        imagePullPolicy: Never
        ports:
          - containerPort: 5002
