k8s/room-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: room-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: room-service
  template:
    metadata:
      labels:
        app: room-service
    spec:
      containers:
      - name: room-service
        image: room-service:latest
        imagePullPolicy: Never
        ports:
          - containerPort: 5001
