k8s/reservation-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reservation-service
spec:
  selector:
    app: reservation-service
  ports:
  - port: 5002
    targetPort: 5002
    protocol: TCP
  type: ClusterIP
