k8s/room-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: room-service
spec:
  selector:
    app: room-service
  ports:
  - port: 5001
    targetPort: 5001
    protocol: TCP
  type: ClusterIP
